src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}



.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


.scrollers .h1{
  position: relative;
  
  z-index: 1000;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: 600;
  }
  .image-scroller {
      max-width: 100%;
      overflow-x: auto;
      white-space: nowrap;
      transition: transform 0.3s ease;
      scrollbar-width: none; /* Firefox */
      -ms-overflow-style: none; 
  }

  /* Hide scrollbar for Webkit-based browsers (Chrome, Safari, Edge) */
  .image-scroller::-webkit-scrollbar {
      display: none;
  }
 
  /* Adjust the size and spacing of each image container */
  .image-scroller .image-container {
      position: relative;
      display: inline-block;
      max-width: 200px;
      margin-right: 10px;
  }

  /* Styling for the hover effect */
  .image-scroller .image-container:hover .hover-text {
      display: block;
  }

  /* Styling for the hover text */
  .hover-text {
      display: none; 
      bottom: 0;
      margin-top: -60px;
      left: 0;
      right: 0;
      color: white;
      padding: 10px;
      font-size: 12px;
      text-align: center;
      border-radius: 5px;
  }
  /* Adjust the size and spacing of each image */
  .image-scroller img {
      max-width: 200px;
      max-height: 250px;
      margin-right: 10px; 
      object-fit: cover;
      object-position: center;
      border-radius: 10px;
      border: 2px solid #fff;
    }

    .navigation-buttons {
      display: flex;
      justify-content: space-between;
      margin-top: 10px;
    }
    
    .navigation-buttons button {
      padding: 0 10px;
      color: rgb(0, 255, 255);
      border: none;
      cursor: pointer;
      font-size: 1.3rem;
      font-weight: 700;
      text-shadow: 10px 0 20px rgb(0, 217, 255);
    }
    
    .navigation-buttons button:hover {
      background-color: #3f3d3f45;
      border-radius: 10px;
    }

.contain{
  width: 100%;
  min-height: 600px;
  position: relative;
  display: flex;
  align-items: left;
  background: rgb(2, 3, 7, 0.4);
  

}
.contain img{
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  z-index: -1;
}
.swiper-pagination-bullet{
  width: 50px !important;
  height: 6px !important;
  border-radius: 0.2rem !important;
  background: #0f17196c !important;
}
.swiper-pagination-bullet-active{
  width: 6rem !important;
 background: rgb(24, 22, 20) !important;
}
.hometext {
  z-index: 1000;
  padding: 20em 0em;
  background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) , rgb(0, 0, 0));
  transform: scaleX(-1);
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  text-align: left;
}

.hometext span{
  text-transform: uppercase;
  font-size: 3rem;
  
}





.card {
  max-width: 100%;
  height: auto;
  width: auto;
  transition: .5s;
  
}
.my-cards .card:hover{
  background-color: #ffffffcc;
  transform: scale(1.1);
  color: #000000;
}
/* Adjust the icon size and position */
.card i {
  border: 2px solid #00ffee;
  font-size: 24px;
  padding: 5px 9px;
  border-radius: 100px;
 
}


.card .content {
  padding: 15px;
}
.card h1{
  font-size: 16px;
}
.card p{
font-size: 14px;
}
.card .bi-arrow-down-right-circle-fill{
  color: #0091ff;
  border: none;
  float: right;
  cursor: pointer;
  transition: .4s;
}

.profile .cards{
background-color: #22222d;
transition: .4s;
cursor: pointer;
}
.profile .cards:hover{
background-color: #edfcfb;
}

.profile {
max-width: 100%;
overflow-x: auto;
white-space: nowrap;

scrollbar-width: none;
-ms-overflow-style: none;
}

/* Hide scrollbar for Webkit-based browsers (Chrome, Safari, Edge) */
.profile::-webkit-scrollbar {
display: none;
}
.my-cards .flex{
max-width: 100%;
overflow-x: auto;
white-space: nowrap;

scrollbar-width: none; /* Firefox */
-ms-overflow-style: none;
}
.my-cards .flex::-webkit-scrollbar {
display: none;
}


.neon-background {
position: relative;
overflow: hidden;
}

.neon-background::before,
.neon-background::after {
content: "";
position: absolute;
top: 0;
bottom: 0;
width: 51vw;
background: linear-gradient(
to bottom,
rgb(0, 0, 0),
rgba(7, 0, 41, 0.8),
rgba(0, 255, 255, 0.872)
);
filter: blur(100px);
}

.neon-background::before {
left: -57vw;
}

.neon-background::after {
right: -57vw;
}

.content {
position: relative;
z-index: 1;

}


.auction .imge{
width: 60px; 
height: 60px;
border-radius: 50%;
border: 1px solid #edfcfb;


}

.asset-card .imge{
width: 60px; 
height: 60px;
border-radius: 50%;
}




.wrapper { 
position: relative; 

} 

.wrapper .bi { 
text-align: center; 
cursor: pointer; 
position: absolute; 
top: 25%; 
font-size: 1.2rem; 
margin-left: 30px;
margin-right: 30px;
padding-top: 100px;
padding-bottom: 100px;

} 

.wrapper .bi-first { 
left: -22px; 

} 

.wrapper .bi-second { 
right: -22px; 

} 

.wrapper .carousel {
margin: 40px; 
display: grid; 
grid-auto-flow: column; 
grid-auto-columns: calc((100% / 5) - 5px); 
gap: 5px; 
overflow-x: auto; 
scroll-snap-type: x mandatory; 
scroll-behavior: smooth; 

} 

.carousel::-webkit-scrollbar { 
display: none; 
} 

.carousel :where(.card, .img) { 
display: flex; 

} 

.carousel.dragging { 
scroll-snap-type: none; 
scroll-behavior: auto; 
} 

.carousel.no-transition { 
scroll-behavior: auto; 
} 

.carousel.dragging .card { 
cursor: grab; 
user-select: none; 
} 

.carousel .card { 
scroll-snap-align: start; 
list-style: none; 
border-radius: 8px; 
display: flex; 
cursor: pointer; 
align-items: center; 
justify-content: center; 
flex-direction: column; 

} 
.carousel .card .main-card:hover{
box-shadow: 0 0 15px rgb(0, 251, 255);
background-color: #00ffee;
color: #000000;
}


@media screen and (max-width: 900px) { 
.wrapper .carousel { 
grid-auto-columns: calc((100% / 3) - 3px); 

} 
} 


@media screen and (width: 1400px) { 
.wrapper .carousel { 
grid-auto-columns: calc((100% / 3) - 9px); 

} 
.hometext{
padding-top: 800px;
}
.hometext span{
font-size: 3rem;
}
.hometext a{
font-size: 2rem;
}
.hometext p{
font-size: 2rem;
}
} 

@media screen and (max-width: 600px) { 
.wrapper .carousel { 
grid-auto-columns: calc((100% / 1) - 1px);  

} 
}
.creator img{
width: 60px; 
height: 60px;
border-radius: 50%;
border: 1px solid #edfcfb;
}
.creator .card{
cursor: pointer;
transition: box-shadow 0.3s ease-in-out;


}
.creator .card:hover{
box-shadow: 0 0 20px rgb(251, 240, 250);
}
.creator .bi{

border: none;
}
.creator p{
font-size: 20px;
font-weight: 600;
}

.discover .tag-list{
margin: 0;
padding-inline: 0;
list-style: none;
}
.gradient-border {
border-width: 3px;
border-image: linear-gradient(to right, #ff5900, #02fff2);
border-image-slice: 1;
border-image-repeat: stretch;
padding-top: 10px;
padding-bottom: 10px;
padding-left: 30px;
padding-right: 30px;
cursor: pointer;
border-radius: 50px;
transition: box-shadow 0.3s ease-in-out;
}
.gradient-border:hover{
box-shadow: 0 0 20px rgb(255, 145, 0);
background-color: #ff8000;
color: #000000;
border-image:none;
}
.first{
border: 1px solid #606060;
padding: 10px;
border-radius: 10px;
}




footer .submit{
background-color: rgb(0, 255, 251);
box-shadow: 0 0 20px rgb(0, 255, 251);
color: #424243;
}



.neon {
  font-size: 4rem;
  color: #0ff;
text-shadow: 0 0 10px #6afdff,  0 0 30px #56fff1, 0 0 70px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;
}

/**discover scroller styles**/
.scroller {
  max-width: 100%;
}

.scroller[data-animated=true] {
  overflow: hidden;
  mask: linear-gradient(
      90deg,
      transparent,
      rgb(255, 255, 255) 20%,
      white 90%,
      transparent);
}

.scroller[data-animated=true] .scroller_inner {
  width: max-content;
  flex-wrap: nowrap;
  animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards) linear infinite;
}

.scroller[data-direction="right"] {
  --_animation-direction: reverse;
}

.scroller[data-direction="left"] {
  --_animation-direction: forwards;
}

.scroller[animation-duration="slow"] {
  --_animation-duration: 90s;
}

.scroller[animation-duration="fast"] {
  --_animation-duration: 10s;
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

.scroller_inner {
  display: flex;
  gap: 1rem;
  padding-block: 1rem;
  flex-wrap: wrap;
}


/* creators style*/
.hero {
  position: relative;
  background-image: linear-gradient(to left, rgba(183, 31, 31, 0), rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.861), rgb(0, 0, 0)), url('/assets/img.jpeg');
  background-size: cover;
  background-position: center;
  height: 500px;
  color: white;
  display: flex;
  border-bottom: 1px solid white;
  
}


.neon {
  font-size: 4rem;
  color: #0ff;
text-shadow: 0 0 10px #6afdff,  0 0 30px #56fff1, 0 0 70px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;
}
.this-card {
  transition: transform 0.3s ease;
  
  
}
.this-card:hover {
  transform: scale(1.05);
  box-shadow: 0 0 15px rgb(228, 255, 255);
}
.this-card .info {
  opacity: 0;
  transition: opacity 0.3s ease;
}
.this-card:hover .info {
  opacity: 1;
}

.hidden {
  display: none;
}
.active {
  color: rgb(0, 238, 255);
  font-size: 1.1rem;
  font-weight: 600;
}

.contactus .form{
 margin-top: -150px;
  
}
@media screen and (max-width: 500px) {
  .contactus .form{
    margin-top: -80px;
    width: 100%;
    padding: 20px;
  }

  
}
@media screen and (max-width: 700px) {
  .contactus .form{
    margin-top: -150px;
    width: 100%;
    padding: 20px;
  }

  
}

@keyframes colorMovement {
  0% { color: #00f2ff; } /* Start color */
  50% { color: #eeff00; } /* Middle color */
  100% { color: #ee00ff; } /* End color */
}

.contactus .bg{
  margin-bottom: 2.5rem; /* 10px * 2.5 = 25px */
}


.contactus .animated-text {
  animation: colorMovement 3s infinite alternate; /* Apply animation */
}

.gradient-text {
  background: linear-gradient(70deg, #00f2ff, rgb(255, 251, 0), #ff00fb);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}


/* CSS for the hover effect and placeholder */
.wishlist button.relative {
  position: relative;
}

.whishlist button.relative:hover span {
  opacity: 1;
}

